# TREX

./: .gitignore  CMakeLists.txt  README.md  command_mode.cpp  command_mode.h  commands.cpp  commands.h  cursor_control.cpp  cursor_control.h  keymap.h  list.cpp  list.h  ls.cpp  main.cpp  makefile  normal_mode.cpp  normal_mode.h  search_mode.cpp  search_mode.h  snapshot.cpp  snapshot.h  util.cpp  util.h
scripts/: addheader.sh  header.txt
src/: command_mode.cpp  command_mode.h  commands.h  cursor_control.cpp  cursor_control.h  keymap.h  list.cpp  list.h  main.cpp  normal_mode.cpp  normal_mode.h  search_mode.h  snapshot.cpp  util.cpp  util.h
